--- a/AppBolivar/Src/Atencion Cliente Citas.fx.yaml
+++ b/AppBolivar/Src/Atencion Cliente Citas.fx.yaml
@@ -4183,7 +4183,7 @@
             galUsuariosExis As gallery.galleryVertical:
                 DelayItemLoading: =true
                 Height: =472
-                Items: ='public.Medical_Center_Historial_Principal'
+                Items: =Search('public.Medical_Center_Pacientes', TextInputSearchPacientes.Text, "Nombres", "Apellidos", "Telefono","DNI_CI")
                 Layout: =Layout.Vertical
                 LoadingSpinner: =LoadingSpinner.Data
                 ShowScrollbar: =false
@@ -4269,7 +4269,7 @@
                             FontWeight: =FontWeight.Semibold
                             Height: =50
                             Size: =12
-                            Text: =ThisItem.telefono
+                            Text: =ThisItem.Telefono
                             Wrap: =false
                             ZIndex: =1
 
@@ -4287,7 +4287,7 @@
                             FontWeight: =FontWeight.Semibold
                             Height: =50
                             Size: =12
-                            Text: =ThisItem.correo
+                            Text: =ThisItem.Correo
                             Wrap: =false
                             ZIndex: =1
 
@@ -4409,6 +4409,32 @@
                 X: =20
                 Y: =186
                 ZIndex: =9
+
+            TextInputSearchPacientes As text:
+                BorderColor: =RGBA(0, 0, 0, 1)
+                BorderThickness: =1
+                Default: =""
+                Height: =36
+                HintText: ="Buscar usuario por nombre, apellido. documento de identidad, celular o correo"
+                PaddingLeft: =46
+                RadiusBottomLeft: =4
+                RadiusBottomRight: =4
+                RadiusTopLeft: =4
+                RadiusTopRight: =4
+                Width: =800
+                X: =20
+                Y: =68
+                ZIndex: =10
+
+            Icon12 As icon.Search:
+                Color: =RGBA(0, 0, 0, 1)
+                DisplayMode: =DisplayMode.View
+                Height: =20
+                Icon: =Icon.Search
+                Width: =20
+                X: =36
+                Y: =76
+                ZIndex: =11
 
     GroupAgendarEUser As group:
         Height: =5
@@ -4569,7 +4595,7 @@
                 Default: |
                     =If(varAgendarCitaNew,
                     LookUp(Sort('public.Medical_Center_Ticket',fecha_creacion,SortOrder.Descending),id_Pacientes_DNI=tiDNI_AgendarCita_1.Text,Correo),
-                    galUsuariosExis.Selected.correo)
+                    galUsuariosExis.Selected.Correo)
                     //ALTERNATIVAS
                 Font: =Font.'Segoe UI'
                 Height: =36
@@ -4869,7 +4895,7 @@
                 BorderColor: =RGBA(0, 0, 0, 1)
                 Default: |-
                     =If(varAgendarCitaNew,LookUp(Sort('public.Medical_Center_Ticket',fecha_creacion,SortOrder.Descending),id_Pacientes_DNI=tiDNI_AgendarCita_1.Text,Telefono_Celular),
-                    galUsuariosExis.Selected.telefono)
+                    galUsuariosExis.Selected.Telefono)
                     //ALTERNATIVAS
                 Font: =Font.'Segoe UI'
                 Height: =36
