--- a/AppBolivar/CanvasManifest.json
+++ b/AppBolivar/CanvasManifest.json
@@ -147,6 +147,7 @@
     "Odontologia",
     "Laboratorio",
     "Consulta Medica Dashboard",
+    "scDataAntigua",
     "Medicamentos Maestro",
     "Laboratorio Maestro",
     "Tratamiento Maestro",
